@@ -18,7 +18,6 @@ import io.openaev.injector_contract.fields.ContractElement;
 import io.openaev.injector_contract.fields.ContractExpectations;
 import io.openaev.rest.domain.enums.PresetDomain;
 import java.io.InputStream;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -50,9 +49,7 @@ public class ManualContract extends Contractor {
     ContractConfig contractConfig = getConfig();
     ContractElement teams = teamField(Multiple);
     ContractExpectations expectations =
-        expectationsField(
-            Collections.emptyList(),
-            List.of(this.expectationBuilderService.buildManualExpectation()));
+        expectationsField(List.of(this.expectationBuilderService.buildManualExpectation()));
 
     List<ContractElement> instance =
         contractBuilder().mandatoryOnCondition(teams, expectations).optional(expectations).build();
